--- a/fixme-market/pom.xml
+++ b/fixme-market/pom.xml
@@ -2,15 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>wethinkcode</artifactId>
+        <artifactId>fixme</artifactId>
         <groupId>rdejage</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
+    <groupId>rdejage</groupId>
+    <artifactId>fixme-market</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-    <artifactId>wethinkcode</artifactId>
+    <dependencies>
+
+    </dependencies>
 
 </project>
