struugling to get the json library into the market

--- a/fixme-market/pom.xml
+++ b/fixme-market/pom.xml
@@ -10,17 +10,25 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>rdejage</groupId>
+    <groupId>rdejage.fixme.market</groupId>
     <artifactId>fixme-market</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <url>http://maven.appache.org</url>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
 
     </dependencies>
 
     <build>
         <plugins>
+            <!-- Manual Deployment -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -30,13 +38,36 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <!-- Copy dependencies to a file -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/dependencies</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>false</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
+            <!-- Make the jar executable and class path aware -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <archive>
                         <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>dependencies/</classpathPrefix>
                             <mainClass>rdejage.fixme.market.FixmeMarket</mainClass>
                         </manifest>
                     </archive>
