--- a/fixme-market/pom.xml
+++ b/fixme-market/pom.xml
@@ -19,9 +19,9 @@
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.json/json -->
         <dependency>
-            <groupId>com.googlecode.json-simple</groupId>
-            <artifactId>json-simple</artifactId>
-            <version>1.1.1</version>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
         </dependency>
 
     </dependencies>
